--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberFood UA | Neon Delivery</title>
+    <title>Гусочка | Кібер-Доставка</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Inter:wght@300;400;600;900&family=Plus+Jakarta+Sans:wght@300;400;800&display=swap" rel="stylesheet">
     <script>
